fix header ligh responsive. fix responsive spacing for headline

--- a/assets/components/atoms/drawer/drawer.scss
+++ b/assets/components/atoms/drawer/drawer.scss
@@ -61,6 +61,7 @@
       position: absolute;
       top: 50%;
       right: 0;
+      font-size: 1.1rem;
       transform: translateY(-50%);
       transform-origin: 50% 50%;
     }
