--- a/assets/components/organisms/fullwidth-teaser/fullwidth-teaser.scss
+++ b/assets/components/organisms/fullwidth-teaser/fullwidth-teaser.scss
@@ -4,7 +4,6 @@
   position: relative;
   width: 100%;
   min-height: 30rem;
-  margin-bottom: $spacer * 2;
   background: $gray-100;
 
   .vimeo-wrapper {
